--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
 }
 
 body {
+    /* width: 1024px;
+    margin: 0 auto;
+    overflow-x: hidden;  */
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #fafad4;
@@ -32,7 +35,7 @@ body {
 /* Styling for the logo container */
 .logo-container {
     position: absolute; /* Keep the logo on the left */
-    left: 10px; /* Adjust left margin */
+    left: 5px; /* Adjust left margin */
     display: flex;
     align-items: center;
 }
@@ -104,6 +107,17 @@ footer {
     .blog-content {
         margin: 30px 10px 5px 10px;
         padding: 10px;
+    }
+
+    .blog-content h3 {
+        color: #333;
+        font-size: 23px;
+        font-family: 'Playfair Display', serif;
+        font-weight: 700;
+        background-color: #BADFE7;
+        padding: 10px;
+        margin-left: -1ch;
+        margin-right: -1ch;
     }
     .blog-image {
         max-height: 250px;
